--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+# Hackersh Changelog
+
+o Break hackersh/network.py and hackersh/misc.py to multiple files and
+  implement a simple plug-in architecture to load them during startup
+
 o Add support for BackTrack 5R3 and 5R2
 
 Hackersh 0.1 [2013-04-01]
