--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,16 @@
 # Hackersh Changelog
 
+o Implement NbtScanStdoutOutputHandler class. Rewrite nbtscan to use it
+
+o Implement SqlMapStdoutOutputHandler class. Rewrite sqlmap to use it
+
+o Implement StdoutOutputHandler - a new Pseudo SAX Content Handler base 
+  class for stdout processing
+
+o Implement ExternalComponentStreamOutput - a new base class for generic
+  SAX-style output parsing. Change ExternalComponentStdoutOutput and
+  ExternalComponentFileOutput to inherit from it.
+
 o Implement shell_split() and replace shlex.split() with it. shell_split()
   will not remove double quotes (i.e. "") when splitting DEFAULT_QUERY.
 
@@ -8,10 +19,10 @@ o sqlmap: Change DEFAULT_QUERY to use "inline IF" to avoid:
   Whenever:
       context['COOKIES'] = False
 
-o Introduce `ipv6_address` - new root component for processing IPv6 Address. 
+o Introduce `ipv6_address` - new root component for processing IPv6 Address.
   Example: "::1" -> ipv6_address -> ...
 
-o Introduce `domain` - new root component for processing domain names. 
+o Introduce `domain` - new root component for processing domain names.
   Example: "hackersh.org" -> domain -> ...
 
 o Implement HackershError Exception class and add 3 new error messages:
