--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Hackersh Changelog
 
+o Introduce `dnsdict6` - new external component for:
+  Information Gathering / Network Analysis / DNS Analysis
+  dnsdict6 v1.8 (c) 2011 by van Hauser / THC <vh@thc.org> www.thc.org
+  Example: "hackersh.org" -> domain -> dnsdict6("-4 -s") -> ...
+
 o Implement SimpleRegExHandler class - a new Pseudo SAX Content Handler
   class for processing output using regex
 
