--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 
 HEAD
 
+o Root Components can be piped via __STDIN__ key in Context
+
 o Add Components: `write`, `write_all`, and `read` to Write/Read Contexts.
   For more info see: `info write`, `info write_all`, and `info read`
 
