--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,10 +2,13 @@
 
 HEAD
 
+o All objects (i.e. builtin shell commands and all types of components) will
+  display usage if `-h` or `--help` command line is passed. Example: nmap -h
+
 o Introduce `clipboard` - new internal component for pasting text from Clipboard.
   Example: (Copy a URL) and then `clipboard | url | w3af`
 
-o Introduce `regex_expand` - new internal component for inverting Regular Expressions.
+o Introduce `regex_expand` - new internal component for inverting Regex.
   Example: "http://localhost/index[0-9]\.html" -> regex_expand -> url
 
 o Root Components can be piped via __STDIN__ key in Context
